updated dependencies for my app to include paper-button. test files changed for guuey-dropdown testing.

--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -29,4 +29,5 @@
 <link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html" />
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html" />
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html" />
+<link rel="import" href="../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
