added guuey elements for dropdown for zivile's design(might use later). added elements for picking weekdays and timechunks in dialogs. removed add state for su-goals. still need to add in working modal for this. updated filters for su-medication. also updated su-medication add/edit/view modals with new elements. still need to figure out how to updated the times for all meds and display comments.

--- a/src/elements/guuey-dropdown/guuey-dropdown.html
+++ b/src/elements/guuey-dropdown/guuey-dropdown.html
@@ -4,7 +4,9 @@
   <template>
 
     <style>
-
+    :host{
+      padding:5px;
+    }
     #dropdownContent{
       background-color:transparent;
       border:1px solid grey;
@@ -15,14 +17,22 @@
       padding:5px;
     }
     .guueyDropdown{
-      width:50%;
       border: 1px solid grey;
       display:flex;
       flex-direction:row;
       align-items:stretch;
     }
+    #dropdownLabel{
+      text-transform:uppercase;;
+      font-size:10px;
+      opacity:.7;
+      margin-bottom:5px;
+      padding-bottom:0px;
+    }
     </style>
-
+    <p id="dropdownLabel">
+      [[label]]
+    </p>
     <div class="guueyDropdown">
       <iron-icon id="dropdownIcon" icon="[[icon]]"></iron-icon>
       <select id="dropdownContent" on-change="setVal">
@@ -52,7 +62,7 @@
 
       },
       properties:{
-        val:{
+        value:{
           type:String,
           value:"",
           notify:true
@@ -61,6 +71,10 @@
           type:Array
         },
         icon:{
+          type:String,
+          value:""
+        },
+        label:{
           type:String,
           value:""
         }
