--- a/src/pages/care-plan/su-medication/dependencies.html
+++ b/src/pages/care-plan/su-medication/dependencies.html
@@ -15,4 +15,6 @@
 <link rel="import" href="../../../../bower_components/iron-icons/editor-icons.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
+<link rel="import" href="../../../elements/guuey-time-chunk-selector/guuey-time-chunk-selector.html" />
+<link rel="import" href="../../../elements/guuey-weekday-selector/guuey-weekday-selector.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
