--- a/src/pages/test/test-test/dependencies.html
+++ b/src/pages/test/test-test/dependencies.html
@@ -1,4 +1,10 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
-<link rel="import" href="../../../elements/guuey-dropdown/guuey-dropdown.html" />
+<link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
+<link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-document.html" />
+<link rel="import" href="../../../../bower_components/iron-selector/iron-selector.html" />
+<link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
+<link rel="import" href="../../../../bower_components/paper-checkbox/paper-checkbox.html" />
+<link rel="import" href="../../../elements/guuey-time-chunk-selector/guuey-time-chunk-selector.html" />
+<link rel="import" href="../../../elements/guuey-weekday-selector/guuey-weekday-selector.html" />
