--- a/src/pages/care-plan/su-medication/dependencies.html
+++ b/src/pages/care-plan/su-medication/dependencies.html
@@ -13,6 +13,8 @@
 <link rel="import" href="../../../../bower_components/paper-time-picker/paper-time-picker.html" />
 <link rel="import" href="../../../../bower_components/paper-time-picker/paper-time-picker-dialog-style.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/editor-icons.html" />
+<link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
+<link rel="import" href="../../../../bower_components/iron-icons/communication-icons.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
 <link rel="import" href="../../../elements/guuey-time-chunk-selector/guuey-time-chunk-selector.html" />
